# boolop-rs

./: .gitmodules  Cargo.toml  build.rs
boolop_wrapper/: CMakeLists.txt  boolop.cpp  boolop.hpp
src/: booleans_rs.cpp  booleans_rs.hpp  lib.rs
