[package]
name = "boolop-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[features]
default = ["opt-o2"]
opt-o0 = []
opt-o1 = []
opt-o2 = []
opt-o3 = []
opt-os = []  # Optimize for size
opt-ofast = []  # Fast optimization (may break IEEE compliance)